[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["slivapy <faer2325@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
build = "^1.1.1"
google-api-python-client = "^2.123.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
